# kendratui

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  project_understanding.md
crates/opendev-agents/: Cargo.toml
crates/opendev-agents/src/: doom_loop.rs  lib.rs  llm_calls.rs  main_agent.rs  react_loop.rs  traits.rs
crates/opendev-agents/templates/: reminders.md
crates/opendev-agents/tests/: integration.rs
crates/opendev-channels/: Cargo.toml
crates/opendev-channels/src/: lib.rs  router.rs
crates/opendev-cli/: Cargo.toml
crates/opendev-cli/src/: main.rs  runners.rs  runtime.rs  tui_runner.rs  web_executor.rs
crates/opendev-config/: Cargo.toml
crates/opendev-config/src/: lib.rs  loader.rs  migration.rs  models_dev.rs  paths.rs  profile.rs  watcher.rs
crates/opendev-config/tests/: integration.rs
crates/opendev-context/src/: compaction.rs  context_picker.rs  lib.rs  pair_validator.rs  subdir_instructions.rs  validated_list.rs  worktree.rs
crates/opendev-docker/: Cargo.toml
crates/opendev-docker/src/: deployment.rs  errors.rs  lib.rs  local_runtime.rs  models.rs  remote_runtime.rs  session.rs  tool_handler.rs
crates/opendev-history/: Cargo.toml
crates/opendev-http/: Cargo.toml
crates/opendev-mcp/: Cargo.toml
crates/opendev-memory/: Cargo.toml
crates/opendev-memory/src/: delta.rs  embeddings.rs  lib.rs  playbook.rs  reflector.rs  roles.rs  selector.rs  summarizer.rs
crates/opendev-memory/src/summarizer/: learnings.rs
crates/opendev-memory/tests/: integration.rs
crates/opendev-models/: Cargo.toml
crates/opendev-plugins/: Cargo.toml
crates/opendev-repl/: Cargo.toml
crates/opendev-repl/src/: file_injector.rs  lib.rs  query_enhancer.rs  query_processor.rs  repl.rs  tool_executor.rs
crates/opendev-repl/src/commands/: builtin.rs
crates/opendev-repl/src/handlers/: file_handler.rs  process_handler.rs  registry.rs  thinking_handler.rs  traits.rs
crates/opendev-runtime/: Cargo.toml
crates/opendev-tools-core/: Cargo.toml
crates/opendev-tools-impl/: Cargo.toml
crates/opendev-tools-lsp/: Cargo.toml
crates/opendev-tools-symbol/: Cargo.toml
crates/opendev-tui/: Cargo.toml
crates/opendev-web/: Cargo.toml
migration_docs/: AGENT_TEAMS.md  ARCHITECTURE.md  CRATE_MAPPING.md  PHASES.md  README.md  SETUP_WIZARD_PORT.md  STRATEGY.md  TESTING.md  TOOL_IMPLEMENTATION_GUIDE.md  TUI_MIGRATION.md
opendev/web/: state.py  websocket.py
tests/: test_explore_first.py  test_parallel_tools.py  test_present_plan_tool.py
(+333 files in other folders)
