[package]
name = "opendev-docker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
dirs-next = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
