[package]
name = "opendev-docker"
description = "Docker runtime support for OpenDev AI coding agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
dirs-next = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
