[package]
name = "opendev-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ACE memory system: playbook, delta operations, embeddings, selection, reflection"

[dependencies]
opendev-models = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
sha2 = "0.10"

[dev-dependencies]
tempfile = { workspace = true }
